update goimapnotify for posteo IMAP IDLE

--- a/mutt/README
+++ b/mutt/README
@@ -2,8 +2,8 @@ Requires:
 mutt
 isync
 w3m
-bitwarden-cli (bw)
-goimapnotify (https://gitlab.com/shackra/goimapnotify)
+bitwarden-cli (bw) linked to --> /usr/local/bin/bw
+goimapnotify (https://gitlab.com/shackra/goimapnotify) linked to --> /usr/local/bin/goimapnotify
 
     $ sudo loginctl enable-linger <username>
     $ systemctl --user enable --now goimapnotify@posteo.service
